--- a/eoe.html
+++ b/eoe.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>EOE</title>  
 
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -63,16 +63,16 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="./assets/images/work001-01.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/work002-01.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">001 : Fringilla sit amet</h1>
+            <h1 class="h2">002 : Escuela de Oficios Electrosonoros</h1>
           </div>
-          <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
+          <p>La <a href="http://oficioselectrosonoros.org/">Escuela de Oficios Electrosonoros</a> tiene como objetivo diseñar experiencias de arte y educación en torno a la música contemporánea con especial atención a cuestiones de género que se concreta en los siguientes objetivos: la investigación sobre procesos de mediación cultural en torno a la escucha, la experimentación sonora con instrumentos electrónicos y digitales caseros, la creación de recursos educativos en línea, la formación de los profesores de música y la difusión de dicha cultura musical en los centros escolares.</p>
 
           <blockquote>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
-            <small class="pull-right">Irina Martin</small>
+            <p>"La Escuela de Oficios Electrosonoros es el marco donde mejor podemos experimentar en arte y educación."</p>
+            <small class="pull-right">Patricia Raijenstain</small>
           </blockquote>
         </div>
       </div>
@@ -82,18 +82,29 @@
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
           <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/work001-02.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <img src="./assets/images/work002-02.jpg" class="img-responsive" alt="">
+            <p>Foto de Julio Albarranz</p>
           </div>
           <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/work001-03.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
+            <img src="./assets/images/work002-04.png" class="img-responsive" alt="">
+            <p>Fotograma de Miguel Moreno Torres</p>
           </div>
         </div>
       </div>
 
-      <div class="col-xs-12">
-        <img src="./assets/images/work001-04.jpg" class="img-responsive" alt="">
+      <div class="col-md-8 col-md-offset-2 section-container-spacer">
+        <p>La Escuela de Oficios Electrosonoros cuenta con el apoyo de la Fundación Daniel y Nina Carasso, forma parte de la cooperativa cultural Smart Ibérica y ha colaborado con las siguientes instituciones:
+		              <ul>
+                <li>Casa Árabe</li>
+                <li>Casa Encendida</li>
+                <li>Museo Thyssen-Bornemisza</li>
+                <li>Museo del Prado</li>
+				<li>Tabakalera</li>
+                <li>CentroCentro</li>
+                <li>Centro Cultural Conde Duque</li>
+                <li>IVAM</li>
+              </ul>
+		</p>
       </div>
 
     </div>
