--- a/eoe.html
+++ b/eoe.html
@@ -94,15 +94,16 @@
 
       <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <p>La Escuela de Oficios Electrosonoros cuenta con el apoyo de la Fundación Daniel y Nina Carasso, forma parte de la cooperativa cultural Smart Ibérica y ha colaborado con las siguientes instituciones:
-		              <ul>
+		      <ul>
                 <li>Casa Árabe</li>
                 <li>Casa Encendida</li>
                 <li>Museo Thyssen-Bornemisza</li>
                 <li>Museo del Prado</li>
-				<li>Tabakalera</li>
+                <li>Museo Nacional Centro de Arte Reina Sofia</li>
+				<li>Tabakalera Donosti</li>
                 <li>CentroCentro</li>
                 <li>Centro Cultural Conde Duque</li>
-                <li>IVAM</li>
+                <li>Institut Vlencià d'Art Modern</li>
               </ul>
 		</p>
       </div>
