--- a/medialab.html
+++ b/medialab.html
@@ -92,7 +92,7 @@
         </p>
 		
 		<h3>Encuentros AVLAB</h3>
-		<p>Durante la investigación se ha organizado la producción técnica de los encuentros AVLAB en Medialab-Prado. Los encuentros AVLAB tienen como objetivo servir de lugar de comunicación y difusión de proyectos e investigaciones en torno a lo sonoro, lo visual y lo performático.</p><p>Los encuentros AVLAB que se han organizado son:</p><p><strong>2015</strong></p>
+		<p>Durante la investigación trabajé en la producción técnica de los encuentros AVLAB en Medialab-Prado. Los encuentros AVLAB tienen como objetivo servir de lugar de comunicación y difusión de proyectos e investigaciones en torno a lo sonoro, lo visual y lo performático.</p><p>Los encuentros AVLAB en los que trabajé son:</p><p><strong>2015</strong></p>
 		<p>Encuentro AVLAB - <a href="https://href.li/?http://medialab-prado.es/article/avlab-octubre-2015">Octubre</a> - <a href="https://t.umblr.com/redirect?z=https%3A%2F%2Fvimeo.com%2F147314758&amp;t=MmMyNzZiNzAyOGNlMzEzNTY5NjBhNDlkNzc1YjJmMTVlZGY1ZmM4ZixUbU4zdWpESg%3D%3D&amp;p=&amp;m=0&amp;ts=1640642481">(video sobre el encuentro)</a> 
 		<br> Encuentro AVLAB - <a href="https://href.li/?http://medialab-prado.es/article/avlab-octubre-2015-musica-electro-acustica">Diciembre</a>&nbsp;- (<a href="https://t.umblr.com/redirect?z=https%3A%2F%2Fvimeo.com%2F159921853&amp;t=OGI4MDk5OGQ5YTgzODkxODVjN2I1NTQ5NzdhMzViMGIzMTMzMzQyYyxUbU4zdWpESg%3D%3D&amp;p=&amp;m=0&amp;ts=1640642481">video del festilab</a>) 
 		
