--- a/public.html
+++ b/public.html
@@ -109,6 +109,7 @@
 		<p> Mis publicaciones:
 			  <ul>
                 <li>Jara, J. (2019). Experiencias educativas en torno a la música electrónica. Eufonía: Didáctica de la música, ISSN 1135-6308, ISSN-e 2014-4741, Nº 79, 2019, págs. 14-20</li>
+				<li>Jara, J. (coord.) (2019). Actas de la cuarta conferencia internacional de live coding. Edita: Medialab Prado. ISBN: 978 84 18299 08 7</li>
 				<li>Jara. J. (2020). Educar en otros mundos sonoros. Zenodo. https://doi.org/10.5281/zenodo.4534134</li>
                 <li>Jara. J. (2021). Código informático y algoritmos como instrumentos musicales en educación. Murillo, Adolf; Tejada, Jesús; Riaño, Mª Elena y Berbel, Noemy (Coords). INSTRUMENTARIUM XX1. Nuevos sonidos en el aula de música. València: EdictOràlia Llibres i Publicacions, 2021, 306 p. ISBN: 978-84-123485-4-5</li>
               </ul>
