--- a/medialab.html
+++ b/medialab.html
@@ -73,8 +73,10 @@
 		  </p>
 		  <p>
 			<h4>En este vídeo planteo un resumen de mi paso por Medialab Prado.</h4>
+			<div class=video-container>
 			<iframe title="vimeo-player" src="https://player.vimeo.com/video/311208240?h=8d9de29ec1" width="640" height="360" frameborder="0" ></iframe>
-          </p>
+            </DIV> 
+		 </p>
 		
 		<p>
 			<h3>Expansion of the Universe</h3>
