--- a/works.html
+++ b/works.html
@@ -129,19 +129,19 @@
                         <h4>005/006</h4>
                         <h3>Realidad Extendida</h3>
                         <p>Desde la primera edición del Festival LEV Matadero trabajo en la sección VRTX.</p>
-                        <a href="./xr.html" class="btn btn-default">Discover</a>
+                        <a href="./xr.html" class="btn btn-default">Ampliar</a>
                       </div>
                     </div>
                     
                     <div class="col-sm-4">
                       <a href="./pradera.html" class="black-image-project-hover">
-                        <img src="./assets/images/work03-hover.jpg" alt="Image" class="img-responsive">
+                        <img src="./assets/images/work06-hover.jpg" alt="Image" class="img-responsive">
                       </a>
                       <div class="card-container">
                         <h4>006/006</h4>
                         <h3>Escuela Municipal</h3>
                         <p>Desde esta escuela trabajo para dar a conocer la música contemporánea</p>
-                        <a href="./pradera.html" class="btn btn-default">Discover</a>
+                        <a href="./pradera.html" class="btn btn-default">Ampliar</a>
                       </div>
                     </div>
                     
