--- a/medialab.html
+++ b/medialab.html
@@ -74,7 +74,7 @@
 		  <p>
 			<h4>En este vídeo planteo un resumen de mi paso por Medialab Prado.</h4>
 			<div class=video-container>
-			<iframe title="vimeo-player" src="https://player.vimeo.com/video/311208240?h=8d9de29ec1" width="640" height="360" frameborder="0" ></iframe>
+			<iframe title="vimeo-player" src="https://player.vimeo.com/video/311208240?h=8d9de29ec1" width="640" height="360" frameborder="0" allowfullscreen></iframe>
             </DIV> 
 		 </p>
 		
