--- a/medialab.html
+++ b/medialab.html
@@ -67,32 +67,33 @@
         <div class="card-container">
           <div class="text-center">
             <h1 class="h2">001 : Medialab Prado</h1>
-          
-          <p>Desde el 2015 al 2017 trabajé como mediador investiador en el centro cultural Medialab Prado. Durante esos años desempeñé labores de coordinación,
-		  producción técnica de eventos, comisariado y diseño de actividades colaborativas y participacitas.
-		  </p>
-		  <p>
+			<p>Desde el 2015 al 2017 trabajé como mediador investiador en el centro cultural Medialab Prado. Durante esos años desempeñé labores de coordinación,
+			producción técnica de eventos, comisariado y diseño de actividades colaborativas y participacitas.
+			</p>
 			<h4>En este vídeo planteo un resumen de mi paso por Medialab Prado.</h4>
-			<div class=video-container>
-			<iframe title="vimeo-player" src="https://player.vimeo.com/video/311208240?h=8d9de29ec1" width="640" height="360" frameborder="0" allowfullscreen></iframe>
-            </DIV> 
-		 </p>
-		
-		<p>
+		</div>
+		<div class="text-center video-container">
+			<iframe title="vimeo-player" src="https://player.vimeo.com/video/311208240?h=8d9de29ec1" width="560" height="315" frameborder="0" allowfullscreen></iframe>
+		</div>
+
+		<div class="text-center">
 			<h3>Expansion of the Universe</h3>
 			<p>Expansion of the Universe, del compositor Rudolf Wakolbinger sigue el rastro de la evolución del universo desde el Big Bang hasta el momento actual. El trabajo principal de sonorización consiste en el análisis y traducción de diferentes frecuencias de luz en frecuencias audibles. Con el fin de sonorizar la historia del universo, “Expansion of the Universe” necesita de una escultura sonora de 216 altavoces construídos en Medialab-Prado de forma colaborativa gracias al apoyo económico del Foro de Cultura de Austria en Madrid.</p>
 			<p>Esta obra se presentó por vez primera en su rediseño para Medialab-Prado, a través de un taller de producción financiado por el Foro Cultural de Austria gracias a la inestimable ayuda de los/as usuarios/as de Medialab-Prado.</p>
 			<p>Una vez concluido el período de exposición de esta obra y terminado el Festival Punto de Encuentro, organizado por la A.M.E.E. que se celebró en Noviembre del 2016 en Medialab-Prado, la instalación se conserva para un uso posterior como instrumento electroacústico para dar soporte a instalaciones, conciertos acusmáticos y para posibilitar la creación de un laboratorio de espacialización sonora y audio 3D dentro de Medialab-Prado.</p>
+		</div>
+		<div class="video-container">
 			<iframe title="vimeo-player" src="https://player.vimeo.com/video/189307447?h=55fa97e6fd" width="640" height="360" frameborder="0" allowfullscreen></iframe>
-        </p>
-		
-		<p>
+		</div>
+		<div class="text-center">
 			<h3>MOTTO. Mochilas amplificadoras</h3>
 			<p>MOTTO es un proyecto artístico creado por el artista Juan Sorrentino. Consiste en la amplificación sonora del entorno mediante dispositivos móviles, que se llevan a la espalda en forma de mochilas. A su paso por Madrid para la feria de ARCO, la Escuela de Oficios Electrosonoros ayudó a Juan Sorrentino a crear en el Fablab de Medialab Prado una versión de sus mochilas con las que desarrollar la performance.</p>
 			<p>Estas mochilas se han usado para cantidad de otros proyectos como herramienta de escucha e intervención sonora en espacios públicos, como el proyecto "Escuchando Lavapiés".</p>
+		</div>
+		<div class="text-center video-container">
 			<iframe title="vimeo-player" src="https://player.vimeo.com/video/206566665?h=01617cb661" width="640" height="360" frameborder="0" allowfullscreen></iframe>
-        </p>
-		
+		</div>
+		<div class="text-center">
 		<h3>Encuentros AVLAB</h3>
 		<p>Durante la investigación trabajé en la producción técnica de los encuentros AVLAB en Medialab-Prado. Los encuentros AVLAB tienen como objetivo servir de lugar de comunicación y difusión de proyectos e investigaciones en torno a lo sonoro, lo visual y lo performático.</p><p>Los encuentros AVLAB en los que trabajé son:</p><p><strong>2015</strong></p>
 		<p>Encuentro AVLAB - <a href="https://href.li/?http://medialab-prado.es/article/avlab-octubre-2015">Octubre</a> - <a href="https://t.umblr.com/redirect?z=https%3A%2F%2Fvimeo.com%2F147314758&amp;t=MmMyNzZiNzAyOGNlMzEzNTY5NjBhNDlkNzc1YjJmMTVlZGY1ZmM4ZixUbU4zdWpESg%3D%3D&amp;p=&amp;m=0&amp;ts=1640642481">(video sobre el encuentro)</a> 
@@ -136,9 +137,6 @@
 		<p><em>Comisariado por Jesús Jara López</em> 
 		<br>Especial AVLAB - Automáticas'18 - <a href="https://www.medialab-matadero.es/en/activities/automaticas18-recycling-ideas-traditions-and-tools-sandbox-experimental-music">Noviembre</a> - (<a href="https://vimeo.com/343197475">video</a>)
 		<br>Especial AVLAB - Un año en un día - <a href="https://www.medialab-matadero.es/actividades/un-ano-en-un-dia-2018">Diciembre</a> - (<a href="https://vimeo.com/329537309">video</a>) </p>
-
-		
-		
 		</div>
 		</div>
       </div>
