pruebas video youtube

--- a/public.html
+++ b/public.html
@@ -74,13 +74,13 @@
             <p>"Los poemas, las letras y la música de esta grabación, todo ha sido creado por alumnado de enseñanza primaria"</p>
             <small class="pull-right">Robert Gittings. Classroom Projects (2013)</small>
           </blockquote>
-		  <br/>
-		  <p>
+		  <br />
 		  <h4>Este es un video que hice para la presentación del Trabajo Final de Master.</h4>
-		  <iframe width="560" height="315" src="https://www.youtube.com/embed/4UF6ww8gAmg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		  </p>
-		  
-		</div>
+		  </div>
+		  <div class="video-container">
+		  <iframe title="educar en otros mundos sonoros" src="https://www.youtube.com/embed/4UF6ww8gAmg" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+		  </div>
+
 		</div>
       </div>
 
