--- a/public.html
+++ b/public.html
@@ -77,7 +77,7 @@
 		  <br />
 		  <h4>Este es un video que hice para la presentación del Trabajo Final de Master.</h4>
 		  </div>
-		  <div class="video-container">
+		  <div class="iframe-container">
 		  <iframe title="educar en otros mundos sonoros" src="https://www.youtube.com/embed/4UF6ww8gAmg" width="640" height="360" frameborder="0" allowfullscreen></iframe>
 		  </div>
 
