--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             <div class="text-content">
               <h1>Hola,<br>
                 <span id="typed-strings">
-                  <span>soy Jesús Jara López,</span>
-                  <span>investigo en educación musical y tecnología</span>
-                  <!-- <span>música y tecnología</span> -->
+                  <span>soy Jesús Jara,</span>
+                  <span>@laverbenaelectronica</span>
+				  <span>bienvenid_</span>
                 </span>
                 <span id="typed"></span>
               </h1>
