--- a/public.html
+++ b/public.html
@@ -67,8 +67,7 @@
         <div class="card-container">
           <div class="text-center">
             <h1 class="h2">003 : Publicaciones</h1>
-          
-          <p>En diciembre del 2020 presenté el Trabajo Final de Master <a href="https://zenodo.org/record/4534134">"Educar en Otros Mundos Sonoros"</a>, que consiste en una revisión bibliográfica de material educativo orientado a la enseñanza de la música contemporánea.</p>
+			<p>En diciembre del 2020 presenté el Trabajo Final de Master <a href="https://zenodo.org/record/4534134">"Educar en Otros Mundos Sonoros"</a>, que consiste en una revisión bibliográfica de material educativo orientado a la enseñanza de la música contemporánea.</p>
 
           <blockquote>
             <p>"Los poemas, las letras y la música de esta grabación, todo ha sido creado por alumnado de enseñanza primaria"</p>
@@ -77,12 +76,9 @@
 		  <br />
 		  <h4>Este es un video que hice para la presentación del Trabajo Final de Master.</h4>
 		  </div>
-		  <div class="iframe-container">
-		  <iframe title="educar en otros mundos sonoros" src="https://www.youtube.com/embed/4UF6ww8gAmg" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+		  <div class="text-center video-container">
+		  <iframe title="vimeo-player" src="https://player.vimeo.com/video/523126784?h=9ec2506fb5" width="640" height="360" frameborder="0" allowfullscreen></iframe>
 		  </div>
-
-		</div>
-      </div>
 
            <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row"> 
@@ -117,7 +113,8 @@
         </div>
       </div>
 
-
+		</div>
+      </div>
     </div>
   </div>
 </div>
