--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="text-content">
               <h1>Hola,<br>
                 <span id="typed-strings">
-                  <span>soy Jesús Jara López,</span>
+                  <span>soy Jesús Jara,</span>
 				  <span>bienvenid_</span>
                 </span>
                 <span id="typed"></span>
