--- a/livecoding.html
+++ b/livecoding.html
@@ -83,8 +83,9 @@
 		  <h3>Live coding y creación de comunidad</h3>
 		  <p>Durante el tiempo que trabajé en Medialab Prado ayudé a crear una comunidad de live coding en Madrid.
 		  Aunque nuestra actividad está muy limitada por la pandemia, aún organizamos talleres y conciertos.</p>
-		  <iframe width="560" height="315" src="https://www.youtube.com/embed/7jiJjrVRb30" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		  
+		  <div class="video-container">
+		  <iframe width="560" height="315" src="https://www.youtube.com/embed/7jiJjrVRb30" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+		  </div>
 		  <h3>Live coding e investigación</h3>
 		  <p>En 2019 fui coordinador de la cuarta conferencia internacional de live coding en Medialab Prado, Matadero y la EMMyD María Dolores Pradera. Este evento supuso la recepción, selección y presentación de los artículos, performances e instalaciones que presentaron más de 200 personas a nivel internacional.</p>
 		  <p>En la <a href="https://iclc.toplap.org/2019/index.html">web de la conferencia</a> puede verse el trabajo realizado y la publicación académica derivada de él.</p>
@@ -92,8 +93,10 @@
 		  <h3>Live coding y comunicación pública</h3>
 		  <p>En el año 2020 fui invitado a presentar este trabajo en el encuentro ROOTEDCON de ciberseguridad.
 		  Aquí os dejo un video donde podéis revisar esta parte de mi trabajo.</p>
-		  <iframe width="560" height="315" src="https://www.youtube.com/embed/HQfnsBfYsqE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>       
+		  <div class="video-container">
+		  <iframe width="560" height="315" src="https://www.youtube.com/embed/HQfnsBfYsqE" title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+          </div>
+		  </div>       
 	   </div>
       </div>
 
