--- a/livecoding.html
+++ b/livecoding.html
@@ -46,10 +46,10 @@
 
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./medialab.html" title="" class="active">001</a></li>
+            <li><a href="./medialab.html" title="" >001</a></li>
             <li><a href="./eoe.html" title="">002</a></li>
             <li><a href="./public.html" title="">003</a></li>
-            <li><a href="./livecoding.html" title="">004</a></li>
+            <li><a href="./livecoding.html" title="" class="active">004</a></li>
             <li><a href="./xr.html" title="">005</a></li>
             <li><a href="./pradera.html" title="">006</a></li>
           </ul>
