--- a/xr.html
+++ b/xr.html
@@ -46,11 +46,11 @@
 
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./medialab.html" title="" class="active">001</a></li>
+            <li><a href="./medialab.html" title="">001</a></li>
             <li><a href="./eoe.html" title="">002</a></li>
             <li><a href="./public.html" title="">003</a></li>
             <li><a href="./livecoding.html" title="">004</a></li>
-            <li><a href="./xr.html" title="">005</a></li>
+            <li><a href="./xr.html" title="" class="active">005</a></li>
             <li><a href="./pradera.html" title="">006</a></li>
           </ul>
 
@@ -63,12 +63,12 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="./assets/images/work001-01.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/work005-01.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">001 : Fringilla sit amet</h1>
+            <h1 class="h2">005 : Realidad Extendida</h1>
           </div>
-          <p>Nulla facilisi. Vivamus vestibulum, elit in scelerisque ultricies, nisl nunc pulvinar ligula, id sodales arcu sapien in nisi. Quisque libero enim, mattis non augue posuere, venenatis dapibus urna.</p>
+          <p>Desde la primera edición del Festival LEV Matadero en el 2019</p>
 
           <blockquote>
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
