--- a/about.html
+++ b/about.html
@@ -61,18 +61,19 @@
               <div class="row">
                 <div class="col-xs-12 col-md-6">
                   <h3>Investigación</h3>
-                  <p>Tengo interés en construir una trayectoria académica. Me gradué en la UCM de magisterio e informática, 
+                  <p>Tengo interés en construir una <a href="public.html">trayectoria académica</a>. Me gradué en la UCM de magisterio e informática, 
 				  también de música informática y musicología en el HfM de Karlsruhe (Alemania), he concluído el máster 
 				  en investigación musical en la UNIR, y soy docente en la UEM. Fui coordinador de la cuarta conferencia 
-				  internacional de live coding y publico regularmente en revistas de educación musical especializadas.</p>
+				  internacional de <a href="livecoding.html">live coding</a> y publico regularmente en revistas de educación musical especializadas.</p>
                   <h3>Educación</h3>
-                  <p>He trabajado en educación toda mi vida. Actualmente soy director de la Escuela Municipal de Música y Danza
+                  <p>He trabajado en educación toda mi vida. Actualmente soy director de la <a href="pradera.html">Escuela Municipal</a> de Música y Danza
 				  "María Dolores Pradera". Es una escuela muy especial con un proyecto innovador en música y tecnología. 
-				  También soy cofundador del proyecto Escuela de Oficios Electrosonoros en el que hemos 
+				  También soy cofundador del proyecto <a href="eoe.html">Escuela de Oficios Electrosonoros</a> en el que hemos 
 				  desarrollado experiencias de arte educación en museos y centros educativos.</p>
 				  <h3>Gestión cultural</h3>
-                  <p>En Medialab Prado conocí la gestión cultural, desde entonces siempre estoy metido en algo. Actualmente me encargo
-				  de coordinar la sección de realidad virtual del festival LEV Matadero. Aunque siempre hay cosas nuevas. Si quieres saber más, pregúntame.</p>
+                  <p>En <a href="medialab.html">Medialab Prado</a> conocí la gestión cultural, desde entonces siempre estoy metido en algo. Actualmente me encargo
+				  de coordinar la sección de <a href="xr.html">realidad virtual</a> del festival LEV Matadero. Aunque siempre hay cosas nuevas. 
+				  Si quieres saber más, <a href="contact.html">pregúntame.</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <img src="./assets/images/profil.jpg" class="img-responsive" alt="">
