--- a/eoe.html
+++ b/eoe.html
@@ -71,8 +71,8 @@
           <p>La <a href="http://oficioselectrosonoros.org/">Escuela de Oficios Electrosonoros</a> tiene como objetivo diseñar experiencias de arte y educación en torno a la música contemporánea con especial atención a cuestiones de género que se concreta en los siguientes objetivos: la investigación sobre procesos de mediación cultural en torno a la escucha, la experimentación sonora con instrumentos electrónicos y digitales caseros, la creación de recursos educativos en línea, la formación de los profesores de música y la difusión de dicha cultura musical en los centros escolares.</p>
 
           <blockquote>
-            <p>"La Escuela de Oficios Electrosonoros es el marco donde mejor podemos experimentar en arte y educación."</p>
-            <small class="pull-right">Patricia Raijenstain</small>
+            <p>"La Escuela de Oficios es el marco donde mejor podemos experimentar en arte contemporáneo y educación musical."</p>
+            <small class="pull-right">Patricia Raijenstain. Cofundadora de la EOE.</small>
           </blockquote>
         </div>
       </div>
