--- a/xr.html
+++ b/xr.html
@@ -67,38 +67,36 @@
         <div class="card-container">
           <div class="text-center">
             <h1 class="h2">005 : Realidad Extendida</h1>
-          </div>
-          <p>Desde la primera edición del Festival LEV Matadero en el 2019</p>
 
-          <blockquote>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante."</p>
-            <small class="pull-right">Irina Martin</small>
-          </blockquote>
+          <p>Desde la primera edición del <a href="https://levfestival.com/">Festival LEV Matadero</a> en el 2019 colaboro en el diseño y producción de la sección VRTX de realidad extendida.
+		  También he formado parte del equipo de desarrollo de Planet LEV Matadero, coordinando las aportaciones de un equipo interdisciplinar
+		   de artistas, desarrollador_s y técnic_s.</p>
+
+		<h3>Coordinación de proyectos VR</h3>
+		<p>Planet LEV Matadero es un entorno de realidad virtual creado por el Festival LEV y Matadero para la presentación de propuesta artísticas en este medio.
+		Esta plataforma tiene dos versiones, la <a href="https://levfestival.com/planet-lev-matadero/">versión web</a> y la versión para gafas de realidad virtual disponible gratuítamente en STEAM.</p>
+		<div class="video-container">
+		<iframe title="vimeo-player" src="https://player.vimeo.com/video/493190954?h=3f6fb50932" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+		</div>
+
+		<h3>Diseño de experiencias educativas</h3>
+		<p>Junto con el DIMAD, el Festival LEV Matadero llevó a cabo el taller "Hay vida en otros mundos (virtuales)", que tenía como objetivo trabajar junto con un grupo de estudiantes 
+		de diseño, en las oportunidades que los entornos virtuales tienen para la creación y el diseño de moda.</p>
+		<div class="video-container">
+		<iframe title="vimeo-player" src="https://player.vimeo.com/video/529251783?h=dde7cb3588" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+		</div>
+
+		<h3>Gestión de comunidades</h3>		
+		<p>En la última edición del Festival LEV Matadero, coordiné el evento "Ways of InteRXaction" que cuyo objetivo fue atraer al Festival a una comunidad interdisciplinar
+		con la que fortalecer el interés por el medio y fomentar el conocimiento mutuo de agentes trabajando en el medio XR.</p>
+		<div class="video-container">
+		<iframe title="vimeo-player" src="https://player.vimeo.com/video/657750300?h=2424efae47" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+		</div>
         </div>
       </div>
 
+     </div>
       
-      
-      <div class="col-md-8 col-md-offset-2 section-container-spacer">
-        <div class="row">
-          <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/work001-02.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
-          </div>
-          <div class="col-xs-12 col-md-6">
-            <img src="./assets/images/work001-03.jpg" class="img-responsive" alt="">
-            <p>Menphis skyline</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-xs-12">
-        <img src="./assets/images/work001-04.jpg" class="img-responsive" alt="">
-      </div>
-
-    </div>
-  </div>
-</div>
 
 
 <footer class="footer-container text-center">
