--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>Contacto</title>  
 
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -38,10 +38,10 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Works</a></li>
-          <li><a href="./about.html" title="">03 : About me</a></li>
-          <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./components.html" title="">05 : Components</a></li>
+          <li><a href="./about.html" title="">02 : Sobre mi</a></li>
+          <li><a href="./works.html" title="">03 : Proyectos</a></li>
+          <li><a href="./contact.html" title="">04 : Contacto</a></li>
+          <!--<li><a href="./components.html" title="">05 : Components</a></li>-->
         </ul>
 
 
@@ -55,7 +55,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">03 : Contact me</h1>
+            <h1 class="h2">03 : Contacto</h1>
           </div>
           
           <div class="row">
@@ -63,49 +63,26 @@
                <form action="" class="reveal-content">
                   <div class="row">
                     <div class="col-md-7">
-                      <div class="form-group">
-                        <input type="email" class="form-control" id="email" placeholder="Email">
-                      </div>
-                      <div class="form-group">
-                        <input type="text" class="form-control" id="subject" placeholder="Subject">
-                      </div>
-                      <div class="form-group">
-                        <textarea class="form-control" rows="5" placeholder="Enter your message"></textarea>
-                      </div>
-                      <button type="submit" class="btn btn-default btn-lg">Send</button>
+                      Si quieres saber más sobre mi trabajo no dudes en ponerte en contacto conmigo
+					  a través del correo electrónico o seguirme en instagram o linkedin:
                     </div>
                     <div class="col-md-5 address-container">
                       <ul class="list-unstyled">
                         <li>
                           <span class="fa-icon">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
-                          </span>
-                          + 33 9 07 45 12 65
-                        </li>
-                        <li>
-                          <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          e-mail@mail.io
+                          jesusfjara@gmail.com
                         </li>
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa fa-map-marker" aria-hidden="true"></i>
-                          </span>
-                          42 rue Moulbert 75016 Paris
-                        </li>
-                      </ul>
-                      <h3>Follow me on social networks</h3>
-                      <a href="http://www.facebook.com" title="" class="fa-icon">
-                        <i class="fa fa-facebook"></i>
-                      </a>
-                      <a href="http://www.twitter.com" title="" class="fa-icon">
-                        <i class="fa fa-twitter"></i>
-                      </a>
-                      <a href="http://www.linkedin.com" title="" class="fa-icon">
+						<li><a href="https://www.instagram.com/verbenaelectronica/" title="" class="fa-icon">
+                        <i class="fa fa-instagram"></i></a>
+						</li>
+						<li>
+                      <a href="https://www.linkedin.com/in/jesus-jara-lopez/?locale=es_ES" title="" class="fa-icon">
                         <i class="fa fa-linkedin"></i>
                       </a>
-
+					  </li>
+					</ul>
                     </div>
                   </div>
                 </form>
@@ -123,7 +100,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <!-- <p>© UNTITLED | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p> -->
       </div>
     </div>
   </div>
