cambio en contacto
pequeño cambio

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                <form action="" class="reveal-content">
                   <div class="row">
                     <div class="col-md-7">
-                      Si quieres saber más sobre mi trabajo no dudes en ponerte en contacto conmigo
+                      Si quieres saber más sobre mi trabajo o plantearme alguna colaboración no dudes en ponerte en contacto conmigo
 					  a través del correo electrónico o seguirme en instagram o linkedin:
                     </div>
                     <div class="col-md-5 address-container">
