--- a/contact.html
+++ b/contact.html
@@ -69,18 +69,15 @@
                     <div class="col-md-5 address-container">
                       <ul class="list-unstyled">
                         <li>
-                          <span class="fa-icon">
-                            <i class="fa fa-at" aria-hidden="true"></i>
-                          </span>
-                          jesusfjara@gmail.com
+                        <a href = "mailto: jesusfjara@gmail.com" class="fa-icon"><i class="fa fa-at" aria-hidden="true"></i></a>
+                        jesusfjara@gmail.com
                         </li>
-						<li><a href="https://www.instagram.com/verbenaelectronica/" title="" class="fa-icon">
-                        <i class="fa fa-instagram"></i></a>
+						<li><a href="https://www.instagram.com/verbenaelectronica/" title="" class="fa-icon"><i class="fa fa-instagram"></i></a>
+						www.instagram.com/verbenaelectronica
 						</li>
 						<li>
-                      <a href="https://www.linkedin.com/in/jesus-jara-lopez/?locale=es_ES" title="" class="fa-icon">
-                        <i class="fa fa-linkedin"></i>
-                      </a>
+                        <a href="https://www.linkedin.com/in/jesus-jara-lopez/?locale=es_ES" title="" class="fa-icon"><i class="fa fa-linkedin"></i></a>
+					  www.linkedin.com/in/jesus-jara-lopez/
 					  </li>
 					</ul>
                     </div>
