--- a/public.html
+++ b/public.html
@@ -106,7 +106,7 @@
 			  <ul>
                 <li>Jara, J. (2019). Experiencias educativas en torno a la música electrónica. Eufonía: Didáctica de la música, ISSN 1135-6308, ISSN-e 2014-4741, Nº 79, 2019, págs. 14-20. (<a href="https://www.grao.com/es/producto/escuela-de-oficios-electrosonoros-eu07995868">enlace</a>)</li>
 				<li>Jara, J. (coord.) (2019). Actas de la cuarta conferencia internacional de live coding. Edita: Medialab Prado. ISBN: 978 84 18299 08 7. (<a href="https://iclc.toplap.org/2019/index.html">enlace</a>)</li>
-				<li>Jara. J. (2020). Educar en otros mundos sonoros. Zenodo. https://doi.org/10.5281/zenodo.4534134. (<a ="https://doi.org/10.5281/zenodo.4534134">enlace</a>)</li>
+				<li>Jara. J. (2020). Educar en otros mundos sonoros. Zenodo. https://doi.org/10.5281/zenodo.4534134. (<a ="https://zenodo.org/record/4534134#.YdM9J2hByUk">enlace</a>)</li>
                 <li>Jara. J. (2021). Código informático y algoritmos como instrumentos musicales en educación. Murillo, Adolf; Tejada, Jesús; Riaño, Mª Elena y Berbel, Noemy (Coords). INSTRUMENTARIUM XX1. Nuevos sonidos en el aula de música. València: EdictOràlia Llibres i Publicacions, 2021, 306 p. ISBN: 978-84-123485-4-5. (<a href="https://www.edictoralia.com/instrumentarium-xx1-nuevos-sonidos-en-el-aula-de-musica/">enlace</a>)</li>
               </ul>
 		</p>
