--- a/public.html
+++ b/public.html
@@ -66,7 +66,7 @@
         <img src="./assets/images/work003-01.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">003 : Publicaciones</h1>
+            <h1 class="h2">Investigación y Docencia</h1>
 			<p>En diciembre del 2020 presenté el Trabajo Final de Master <a href="https://zenodo.org/record/4534134">"Educar en Otros Mundos Sonoros"</a>, que consiste en una revisión bibliográfica de material educativo orientado a la enseñanza de la música contemporánea.</p>
 
           <blockquote>
