--- a/public.html
+++ b/public.html
@@ -39,20 +39,11 @@
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">00 : Home</a></li>
           <li><a href="./about.html" title="">01 : Sobre mi</a></li>
-          <li><a href="./works.html" title="">02 : Proyectos</a></li>
-          <li><a href="./contact.html" title="">03 : Contacto</a></li>
+          <li><a href="./public.html" title="">02 : Docencia/Investigación</a></li>
+	  <li><a href="./works.html" title="">03 : Proyectos</a></li>
+          <li><a href="./contact.html" title="">04 : Contacto</a></li>
           <!--<li><a href="./components.html" title="">05 : Components</a></li>-->
         </ul>
-
-
-          <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./medialab.html" title="">001</a></li>
-            <li><a href="./eoe.html" title="">002</a></li>
-            <li><a href="./public.html" title="" class="active">003</a></li>
-            <li><a href="./livecoding.html" title="">004</a></li>
-            <li><a href="./xr.html" title="">005</a></li>
-            <li><a href="./pradera.html" title="">006</a></li>
-          </ul>
 
 
       </div>
