--- a/livecoding.html
+++ b/livecoding.html
@@ -39,8 +39,9 @@
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">00 : Home</a></li>
           <li><a href="./about.html" title="">01 : Sobre mi</a></li>
-          <li><a href="./works.html" title="">02 : Proyectos</a></li>
-          <li><a href="./contact.html" title="">03 : Contacto</a></li>
+          <li><a href="./public.html" title="">02 : Docencia/Investigación</a></li>
+	  <li><a href="./works.html" title="">03 : Proyectos</a></li>
+          <li><a href="./contact.html" title="">04 : Contacto</a></li>
           <!--<li><a href="./components.html" title="">05 : Components</a></li>-->
         </ul>
 
