--- a/public.html
+++ b/public.html
@@ -56,7 +56,7 @@
       <div class="col-xs-12">
         <div class="section-container-spacer">
           <div class="text-center">
-            <h1 class="h2">Investigación y Docencia</h1>
+            <h1 class="h2">02 : Investigación y Docencia</h1>
 			<p>En diciembre del 2020 presenté el Trabajo Final de Master <a href="https://zenodo.org/record/4534134">"Educar en Otros Mundos Sonoros"</a>, que consiste en una revisión bibliográfica de material educativo orientado a la enseñanza de la música contemporánea.</p>
 
           <blockquote>
