--- a/public.html
+++ b/public.html
@@ -72,7 +72,7 @@
 
            <div class="col-md-8 col-md-offset-2 section-container-spacer">
         <div class="row">
-	  <p>En el marco de esta investigación he analizado actividades pedagógicas de la siguiente bibliografía:
+	  <p>En el marco de esta investigación he recopilado actividades pedagógicas de la siguiente bibliografía:
 		  <ul>
 		  <li>MacNicol (1992). Sound Inventions: 32 Creative music projects for the junior classroom.</li>
 		  <li>Meyer-Denkmann (1977). Experiments in sound. New directions in musical education for young children.</li>
@@ -92,7 +92,7 @@
 		  </p>
 
 
-		<p> Mis publicaciones:
+		<p> Publicaciones:
 			  <ul>
                 <li>Jara, J. (2019). Experiencias educativas en torno a la música electrónica. Eufonía: Didáctica de la música, ISSN 1135-6308, ISSN-e 2014-4741, Nº 79, 2019, págs. 14-20. (<a href="https://www.grao.com/es/producto/escuela-de-oficios-electrosonoros-eu07995868">enlace</a>)</li>
 		<li>Jara, J. (coord.) (2019). Actas de la cuarta conferencia internacional de live coding. Edita: Medialab Prado. ISBN: 978 84 18299 08 7. (<a href="https://iclc.toplap.org/2019/index.html">enlace</a>)</li>
@@ -101,7 +101,13 @@
 		<li>Jara, J. (2021). Código informático y algoritmos como instrumentos musicales en educación. Murillo, Adolf; Tejada, Jesús; Riaño, Mª Elena y Berbel, Noemy (Coords). INSTRUMENTARIUM XX1. Nuevos sonidos en el aula de música. València: EdictOràlia Llibres i Publicacions, 2021, 306 p. ISBN: 978-84-123485-4-5. (<a href="https://www.edictoralia.com/instrumentarium-xx1-nuevos-sonidos-en-el-aula-de-musica/">enlace</a>)</li>
                 <li>Jara, J. (2022). Y tú, ¿qué música escuchas? No sé... la que sale en Youtube. Colección REVISTA EUFONIA, Num. 091 (ABRIL 22). Música y STEAM, pag 39. ISSN: 1135-6308. (<a href="https://www.grao.com/es/producto/revista-eufonia-091-abril-22-musica-y-steam-eu091/">enlace</a>)</li>
 		<li>Jara, J. (2022). Miniaturas algorítmicas. Revista SOBRE, 8, 57-63. https://doi.org/10.30827/sobre.v8i.25116. (<a href="https://revistaseug.ugr.es/index.php/sobre/article/view/25116">enlace</a>)</li>   
-		   </ul>
+		  	 </ul>
+		</p>
+
+		<p> Docencia:
+			<ul>
+                <li></li>
+			</ul>
 		</p>
         </div>
       </div>
