--- a/public.html
+++ b/public.html
@@ -106,7 +106,7 @@
 
 		<p> Docencia:
 			<ul>
-                <li></li>
+                <li>Curso 2021-2022. Master Universitario en Investigación Musical. Módulo 5: Aplicación de la Tecnología a la Música. Universidad Europea Online. </li>
 			</ul>
 		</p>
         </div>
