--- a/works.html
+++ b/works.html
@@ -68,36 +68,39 @@
         <div class="carousel-inner">
             <div class="item active">
                 <div class="row">
+                    
                     <div class="col-sm-4">
-                      <a href="./medialab.html" title="" class="black-image-project-hover">
-                        <img src="./assets/images/work01-hover.jpg" alt="" class="img-responsive">
+                      <a href="./pradera.html" class="black-image-project-hover">
+                        <img src="./assets/images/work06-hover.jpg" alt="Image" class="img-responsive">
                       </a>
-                      <div class="card-container card-container-lg">
+                      <div class="card-container">
                         <h4>001/006</h4>
-                        <h3>Medialab Prado</h3>
-                        <p>Desde septiembre del 2015 hasta junio del 2017 trabajé en Medialab Prado como mediador/investigador.</p>
-                        <a href="./medialab.html" title="" class="btn btn-default">Ampliar</a>
+                        <h3>Escuela Municipal</h3>
+                        <p>Desde esta escuela trabajo para dar a conocer la música contemporánea</p>
+                        <a href="./pradera.html" class="btn btn-default">Ampliar</a>
                       </div>
                     </div>
-                    <div class="col-sm-4">
-                      <a href="./eoe.html" title="" class="black-image-project-hover">
-                        <img src="./assets/images/work02-hover.jpg" alt="" class="img-responsive">
+
+                   <div class="col-sm-4">
+                      <a href="./xr.html" class="black-image-project-hover">
+                        <img src="./assets/images/work05-hover.jpg" alt="Image" class="img-responsive">
                       </a>
-                      <div class="card-container card-container-lg">
+                      <div class="card-container">
                         <h4>002/006</h4>
-                        <h3>Escuela de Oficios Electrosonoros</h3>
-                        <p>En el 2016, gracias a la Fundación Daniel y Nina Carasso, Patricia Raijenstein y yo fundamos la E.O.E.</p>
-                        <a href="./eoe.html" title="" class="btn btn-default">Ampliar</a>
+                        <h3>Realidad Extendida</h3>
+                        <p>Desde la primera edición del Festival LEV Matadero trabajo en la sección VRTX.</p>
+                        <a href="./xr.html" class="btn btn-default">Ampliar</a>
                       </div>
                     </div>
+
                     <div class="col-sm-4">
                       <a href="./public.html" title="" class="black-image-project-hover">
                         <img src="./assets/images/work03-hover.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
-                        <h3>Publicaciones académicas</h3>
-                        <p>En el 2020 terminé un máster de investigación; punto de partida de una serie de publicaciones.</p>
+                        <h3>Música Algoritmica</h3>
+                        <p>En el 2022 realicé un proyecto de promoción de la música algorítmica en el MNCARS.</p>
                         <a href="./public.html" title="" class="btn btn-default">Ampliar</a>
                       </div>
                     </div>
@@ -108,6 +111,7 @@
             <!--/item-->
             <div class="item">
                 <div class="row">
+
                   <div class="col-sm-4">
                     <a href="./livecoding.html" class="black-image-project-hover">
                       <img src="./assets/images/work04-hover.jpg" alt="Image" class="img-responsive">
@@ -120,27 +124,27 @@
                     </div>
                   </div>
 
-                   <div class="col-sm-4">
-                      <a href="./xr.html" class="black-image-project-hover">
-                        <img src="./assets/images/work05-hover.jpg" alt="Image" class="img-responsive">
+                    <div class="col-sm-4">
+                      <a href="./medialab.html" title="" class="black-image-project-hover">
+                        <img src="./assets/images/work01-hover.jpg" alt="" class="img-responsive">
                       </a>
-                      <div class="card-container">
+                      <div class="card-container card-container-lg">
                         <h4>005/006</h4>
-                        <h3>Realidad Extendida</h3>
-                        <p>Desde la primera edición del Festival LEV Matadero trabajo en la sección VRTX.</p>
-                        <a href="./xr.html" class="btn btn-default">Ampliar</a>
+                        <h3>Medialab Prado</h3>
+                        <p>Desde septiembre del 2015 hasta junio del 2017 trabajé en Medialab Prado como mediador/investigador.</p>
+                        <a href="./medialab.html" title="" class="btn btn-default">Ampliar</a>
                       </div>
                     </div>
 
                     <div class="col-sm-4">
-                      <a href="./pradera.html" class="black-image-project-hover">
-                        <img src="./assets/images/work06-hover.jpg" alt="Image" class="img-responsive">
+                      <a href="./eoe.html" title="" class="black-image-project-hover">
+                        <img src="./assets/images/work02-hover.jpg" alt="" class="img-responsive">
                       </a>
-                      <div class="card-container">
-                        <h4>006/006</h4>
-                        <h3>Escuela Municipal</h3>
-                        <p>Desde esta escuela trabajo para dar a conocer la música contemporánea</p>
-                        <a href="./pradera.html" class="btn btn-default">Ampliar</a>
+                      <div class="card-container card-container-lg">
+                        <h4>002/006</h4>
+                        <h3>Arte y Educación</h3>
+                        <p>En el 2016, gracias a la Fundación Daniel y Nina Carasso, Patricia Raijenstein y yo fundamos la E.O.E.</p>
+                        <a href="./eoe.html" title="" class="btn btn-default">Ampliar</a>
                       </div>
                     </div>
 
