--- a/works.html
+++ b/works.html
@@ -119,7 +119,7 @@
                       <div class="card-container card-container-lg">
                         <h4>004/006</h4>
                         <h3>Arte y Educación</h3>
-                        <p>En el 2016, gracias a la Fundación Daniel y Nina Carasso, Patricia Raijenstein y yo fundamos la E.O.E.</p>
+                        <p>Desde el 2016 diseño y coordino proyectos de arte y educación.</p>
                         <a href="./eoe.html" title="" class="btn btn-default">Ampliar</a>
                       </div>
                     </div>
