--- a/medialab.html
+++ b/medialab.html
@@ -50,9 +50,9 @@
             <li><a href="./pradera.html" title="">001</a></li>
 	    <li><a href="./xr.html" title="">002</a></li>	    
  	    <li><a href="./public.html" title="">003</a></li>
- 	    <li><a href="./eoe.html" title="" class="active">004</a></li>	    
+ 	    <li><a href="./eoe.html" title="">004</a></li>	    
 	    <li><a href="./livecoding.html" title="">005</a></li>
-            <li><a href="./medialab.html" title="">006</a></li>
+            <li><a href="./medialab.html" title="" class="active">006</a></li>
           </ul>
 
 
@@ -67,7 +67,7 @@
         <img src="./assets/images/work001-01.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">001 : Medialab Prado</h1>
+            <h1 class="h2">006 : Medialab Prado</h1>
 			<p>Desde el 2015 al 2017 trabajé como mediador investiador en el centro cultural Medialab Prado. Durante esos años desempeñé labores de coordinación,
 			producción técnica de eventos, comisariado y diseño de actividades colaborativas y participacitas.
 			</p>
