--- a/pradera.html
+++ b/pradera.html
@@ -47,10 +47,10 @@
 
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
-            <li><a href="./pradera.html" title="">001</a></li>
+            <li><a href="./pradera.html" title="" class="active">001</a></li>
 	    <li><a href="./xr.html" title="">002</a></li>	    
  	    <li><a href="./public.html" title="">003</a></li>
- 	    <li><a href="./eoe.html" title="" class="active">004</a></li>	    
+ 	    <li><a href="./eoe.html" title="" >004</a></li>	    
 	    <li><a href="./livecoding.html" title="">005</a></li>
             <li><a href="./medialab.html" title="">006</a></li>
           </ul>
@@ -67,7 +67,7 @@
         <img src="./assets/images/work006-01.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">006 : Escuela Municipal de Música y Danza</h1>
+            <h1 class="h2">001 : Escuela Municipal de Música y Danza</h1>
           </div>
           <p>Desde el curso 2018-2019 tengo la suerte de dirigir la Escuela Municipal de Música y
 		  Danza "María Dolores Pradera". Uno de los objetivos que nos planteamos como equipo es hacer
