--- a/xr.html
+++ b/xr.html
@@ -48,9 +48,9 @@
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
             <li><a href="./pradera.html" title="">001</a></li>
-	    <li><a href="./xr.html" title="">002</a></li>	    
+	    <li><a href="./xr.html" title="" class="active">002</a></li>	    
  	    <li><a href="./public.html" title="">003</a></li>
- 	    <li><a href="./eoe.html" title="" class="active">004</a></li>	    
+ 	    <li><a href="./eoe.html" title="" >004</a></li>	    
 	    <li><a href="./livecoding.html" title="">005</a></li>
             <li><a href="./medialab.html" title="">006</a></li>
           </ul>
@@ -67,7 +67,7 @@
         <img src="./assets/images/work005-01.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">005 : Realidad Extendida</h1>
+            <h1 class="h2">002 : Realidad Extendida</h1>
 
           <p>Desde la primera edición del <a href="https://levfestival.com/">Festival LEV Matadero</a> en el 2019 colaboro en el diseño y producción de la sección VRTX de realidad extendida.
 		  También he formado parte del equipo de desarrollo de Planet LEV Matadero, coordinando las aportaciones de un equipo interdisciplinar
