--- a/eoe.html
+++ b/eoe.html
@@ -67,7 +67,7 @@
         <img src="./assets/images/work002-01.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">004 : Escuela de Oficios Electrosonoros</h1>
+            <h1 class="h2">004 : Arte y Educación</h1>
           </div>
           <p>La <a href="http://oficioselectrosonoros.org/">Escuela de Oficios Electrosonoros</a> tiene como objetivo diseñar experiencias de arte y educación en torno a la música contemporánea con especial atención a cuestiones de género que se concreta en los siguientes objetivos: la investigación sobre procesos de mediación cultural en torno a la escucha, la experimentación sonora con instrumentos electrónicos y digitales caseros, la creación de recursos educativos en línea, la formación de los profesores de música y la difusión de dicha cultura musical en los centros escolares.</p>
 
