--- a/livecoding.html
+++ b/livecoding.html
@@ -48,7 +48,7 @@
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
             <li><a href="./pradera.html" title="">001</a></li>
 	    <li><a href="./xr.html" title="">002</a></li>	    
- 	    <li><a href="./public.html" title="">003</a></li>
+ 	    <li><a href="./musalgo.html" title="">003</a></li>
  	    <li><a href="./eoe.html" title="">004</a></li>	    
 	    <li><a href="./livecoding.html" title="" class="active">005</a></li>
             <li><a href="./medialab.html" title="">006</a></li>
