--- a/musalgo.html
+++ b/musalgo.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>XR</title>
+  <title>MusAlgo</title>
 
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -48,9 +48,9 @@
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
             <li><a href="./pradera.html" title="">001</a></li>
-	    <li><a href="./xr.html" title="" class="active">002</a></li>	    
- 	    <li><a href="./musalgo.html" title="">003</a></li>
- 	    <li><a href="./eoe.html" title="" >004</a></li>	    
+	    <li><a href="./xr.html" title="">002</a></li>	    
+ 	    <li><a href="./musalgo.html" title="" class="active">003</a></li>
+ 	    <li><a href="./eoe.html" title="">004</a></li>	    
 	    <li><a href="./livecoding.html" title="">005</a></li>
             <li><a href="./medialab.html" title="">006</a></li>
           </ul>
@@ -64,40 +64,54 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <img src="./assets/images/work005-01.jpg" class="img-responsive" alt="">
+        <img src="./assets/images/work003-03.png" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">002 : Realidad Extendida</h1>
+            <h1 class="h2">003 : Música Algorítmica</h1>
+          </div>
+          <p>La <a href="http://oficioselectrosonoros.org/">Escuela de Oficios Electrosonoros</a> tiene como objetivo diseñar experiencias de arte y educación en torno a la música contemporánea con especial atención a cuestiones de género que se concreta en los siguientes objetivos: la investigación sobre procesos de mediación cultural en torno a la escucha, la experimentación sonora con instrumentos electrónicos y digitales caseros, la creación de recursos educativos en línea, la formación de los profesores de música y la difusión de dicha cultura musical en los centros escolares.</p>
 
-          <p>Desde la primera edición del <a href="https://levfestival.com/">Festival LEV Matadero</a> en el 2019 colaboro en el diseño y producción de la sección VRTX de realidad extendida.
-		  También he formado parte del equipo de desarrollo de Planet LEV Matadero, coordinando las aportaciones de un equipo interdisciplinar
-		   de artistas, desarrollador_s y técnic_s.</p>
-
-		<h3>Coordinación de proyectos VR</h3>
-		<p>Planet LEV Matadero es un entorno de realidad virtual creado por el Festival LEV y Matadero para la presentación de propuesta artísticas en este medio.
-		Esta plataforma tiene dos versiones, la <a href="https://levfestival.com/planet-lev-matadero/">versión web</a> y la versión para gafas de realidad virtual disponible gratuítamente en STEAM.</p>
-		<div class="video-container">
-		<iframe title="vimeo-player" src="https://player.vimeo.com/video/493190954?h=3f6fb50932" width="640" height="360" frameborder="0" allowfullscreen></iframe>
-		</div>
-
-		<h3>Diseño de experiencias educativas</h3>
-		<p>Junto con el DIMAD, el Festival LEV Matadero llevó a cabo el taller "Hay vida en otros mundos (virtuales)", que tenía como objetivo trabajar junto con un grupo de estudiantes
-		de diseño, en las oportunidades que los entornos virtuales tienen para la creación y el diseño de moda.</p>
-		<div class="video-container">
-		<iframe title="vimeo-player" src="https://player.vimeo.com/video/529251783?h=dde7cb3588" width="640" height="360" frameborder="0" allowfullscreen></iframe>
-		</div>
-
-		<h3>Gestión de comunidades</h3>
-		<p>En la última edición del Festival LEV Matadero, coordiné el evento "Ways of InteRXaction" que cuyo objetivo fue atraer al Festival a una comunidad interdisciplinar
-		con la que fortalecer el interés por el medio y fomentar el conocimiento mutuo de agentes trabajando en el medio XR.</p>
-		<div class="video-container">
-		<iframe title="vimeo-player" src="https://player.vimeo.com/video/657750300?h=2424efae47" width="640" height="360" frameborder="0" allowfullscreen></iframe>
-		</div>
+          <blockquote>
+            <p>"La Escuela de Oficios es el marco donde mejor podemos experimentar en arte contemporáneo y educación musical."</p>
+            <small class="pull-right">Patricia Raijenstain. Cofundadora de la EOE.</small>
+          </blockquote>
         </div>
       </div>
 
-     </div>
 
+
+      <div class="col-md-8 col-md-offset-2 section-container-spacer">
+        <div class="row">
+          <div class="col-xs-12 col-md-6">
+            <img src="./assets/images/work002-02.jpg" class="img-responsive" alt="">
+            <p>Foto de Julio Albarranz</p>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <img src="./assets/images/work002-04.png" class="img-responsive" alt="">
+            <p>Fotograma de Miguel Moreno Torres</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-8 col-md-offset-2 section-container-spacer">
+        <p>La Escuela de Oficios Electrosonoros cuenta con el apoyo de la Fundación Daniel y Nina Carasso, forma parte de la cooperativa cultural Smart Ibérica y ha colaborado con las siguientes instituciones:
+		      <ul>
+                <li>Casa Árabe</li>
+                <li>Casa Encendida</li>
+                <li>Museo Thyssen-Bornemisza</li>
+                <li>Museo del Prado</li>
+                <li>Museo Nacional Centro de Arte Reina Sofia</li>
+				<li>Tabakalera Donosti</li>
+                <li>CentroCentro</li>
+                <li>Centro Cultural Conde Duque</li>
+                <li>Institut Vlencià d'Art Modern</li>
+              </ul>
+		</p>
+      </div>
+
+    </div>
+  </div>
+</div>
 
 
 <footer class="footer-container text-center">
