--- a/works.html
+++ b/works.html
@@ -94,14 +94,14 @@
                     </div>
 
                     <div class="col-sm-4">
-                      <a href="./public.html" title="" class="black-image-project-hover">
-                        <img src="./assets/images/work03-hover.jpg" alt="" class="img-responsive">
+                      <a href="./algomus.html" title="" class="black-image-project-hover">
+                        <img src="./assets/images/work03-hover.png" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
                         <h3>Música Algoritmica</h3>
                         <p>En el 2022 realicé un proyecto de promoción de la música algorítmica en el MNCARS.</p>
-                        <a href="./public.html" title="" class="btn btn-default">Ampliar</a>
+                        <a href="./algomus.html" title="" class="btn btn-default">Ampliar</a>
                       </div>
                     </div>
 
