--- a/xr.html
+++ b/xr.html
@@ -87,10 +87,17 @@
 		</div>
 
 		<h3>Gestión de comunidades</h3>
-		<p>En la última edición del Festival LEV Matadero, coordiné el evento "Ways of InteRXaction" que cuyo objetivo fue atraer al Festival a una comunidad interdisciplinar
+		<p>En la edición del Festival LEV Matadero 2021, coordiné el evento "Ways of InteRXaction" que cuyo objetivo fue atraer al Festival a una comunidad interdisciplinar
 		con la que fortalecer el interés por el medio y fomentar el conocimiento mutuo de agentes trabajando en el medio XR.</p>
 		<div class="video-container">
 		<iframe title="vimeo-player" src="https://player.vimeo.com/video/657750300?h=2424efae47" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+		</div>
+		
+		<h3>Investigación artística</h3>
+		<p>En la edición del Festival LEV Matadero 2022, realicé el trabajo de investigación y redacción del programa de mano de la exposición <a href="https://www.mataderomadrid.org/programacion/metaversos-realidades-en-transicion">Metaversos: Realidades en Transición</a> que se expuso en la Nave 0 del Centro de Arte Matadero Madrid
+		desde octubre del 2022 hasta enero del 2023. En ella reflexionamos sobre el futuro de los metaversos como espacio de creación sostenible.</p>
+		<div class="video-container">
+		<img title="exposición metaversos" src="assets/images/metaversos.jpg" width="800" height="449"></img>
 		</div>
         </div>
       </div>
